--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "es.joseAlvarez.TipCalculator"
+        applicationId "es.juanTejada.TipCalculator"
         minSdkVersion 26
         targetSdkVersion 29
         versionCode 1
